--- a/spec/support/cassettes/links_info_search.yml
+++ b/spec/support/cassettes/links_info_search.yml
@@ -46,4 +46,50 @@ http_interactions:
         Numbers Authority","news_source":"Internet Assigned Numbers Authority","summary":null,"version":"v2"}'
     http_version: 
   recorded_at: Thu, 19 Jun 2014 12:06:08 GMT
+- request:
+    method: get
+    uri: http://public.xenapto.com/api/v2/links/search.json?url=http://iana.org
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - "*/*; q=0.5, application/xml"
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 19 Jun 2014 12:24:59 GMT
+      Status:
+      - 200 OK
+      Connection:
+      - close
+      Content-Type:
+      - application/json; charset=utf-8
+      Content-Length:
+      - '213'
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Etag:
+      - '"37c7690f162d7e84536d18edf2df448e"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - c897abac4d03e775b72dc3814759a60a
+      X-Runtime:
+      - '3.034072'
+      X-Rack-Cache:
+      - miss
+    body:
+      encoding: UTF-8
+      string: '{"contacts":[],"mentions":[],"emails":[],"url":"http://iana.org","domain":"iana.org","title":"Internet
+        Assigned Numbers Authority","news_source":"Internet Assigned Numbers Authority","summary":null,"version":"v2"}'
+    http_version: 
+  recorded_at: Thu, 19 Jun 2014 12:24:59 GMT
 recorded_with: VCR 2.9.2
