--- a/.hound.yml
+++ b/.hound.yml
@@ -1,1 +1,16 @@
-inherit_from: .rubocop.yml
+LineLength:
+  Description: 'Limit lines to 120 characters.'
+  Max: 120
+  Enabled: true
+
+FileName:
+  Description: 'Use snake_case for source file names.'
+  Enabled: false
+
+MethodLength:
+  Description: 'Avoid methods longer than 10 lines of code.'
+  Enabled: false
+
+Documentation:
+  Description: 'Document classes and non-namespace modules.'
+  Enabled: false
