--- a/.hound.yml
+++ b/.hound.yml
@@ -3,6 +3,10 @@ LineLength:
   Max: 120
   Enabled: true
 
+StringLiterals:
+  EnforcedStyle: single_quotes
+  Enabled: true
+
 FileName:
   Description: 'Use snake_case for source file names.'
   Enabled: false
