--- a/.hound.yml
+++ b/.hound.yml
@@ -1,20 +1,4 @@
-LineLength:
-  Description: 'Limit lines to 120 characters.'
-  Max: 120
-  Enabled: true
-
-StringLiterals:
-  EnforcedStyle: single_quotes
-  Enabled: true
-
-FileName:
-  Description: 'Use snake_case for source file names.'
-  Enabled: false
-
-MethodLength:
-  Description: 'Avoid methods longer than 10 lines of code.'
-  Enabled: false
-
-Documentation:
-  Description: 'Document classes and non-namespace modules.'
-  Enabled: false
+---
+ruby:
+  enabled: true
+  config_file: .rubocop.yml
