--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,44 @@
-inherit_from: .hound.yml
+---
+# These are OK:
+
+StringLiterals:
+  EnforcedStyle: single_quotes
+  Enabled: true
+
+DotPosition:
+  Description: 'Checks the position of the dot in multi-line method calls.'
+  EnforcedStyle: leading
+  Enabled: true
+
+ClassAndModuleChildren:
+  Description: 'Checks style of children classes and modules.'
+  EnforcedStyle: nested
+  Enabled: true
+
+Documentation:
+  Description: 'Document classes and non-namespace modules.'
+  Enabled: false
+
+Output:
+  Description: 'Checks for calls to puts, print, etc.'
+  Enabled: false
+
+ExtraSpacing:
+  Enabled: false
+
+FileName:
+  Description: 'Use snake_case for source file names.'
+  Enabled: true
+
+Eval:
+  Enabled: false
+
+LineLength:
+  Max: 120
+  Enabled: true
+
+FileName:
+  Description: 'Use snake_case for source file names.'
+  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#snake-case-files'
+  Enabled: false
+
