--- a/spec/support/cassettes/name_search.yml
+++ b/spec/support/cassettes/name_search.yml
@@ -53,6 +53,48 @@ http_interactions:
         Jones","identity_slug":"dxj00029","service":"fsa","url":"http://www.fsa.gov.uk/register//indivbasicdetails.do?sid=282759"},{"contact_type":"person","description":"Derek
         Jones","identity_slug":"dxj01164","service":"fsa","url":"http://www.fsa.gov.uk/register//indivbasicdetails.do?sid=490042"},{"contact_type":"person","description":"Derek
         Jones","identity_slug":"dxj01321","service":"fsa","url":"http://www.fsa.gov.uk/register//indivbasicdetails.do?sid=729794"},{"contact_type":"person","description":null,"identity_slug":"pub/derek-jones/15/b2/55b","service":"linked_in","url":"http://www.linkedin.com/pub/derek-jones/15/b2/55b"},{"contact_type":"person","description":null,"identity_slug":"http://www.dereknakano.com","service":"url","url":"http://www.dereknakano.com"}],"relationships":[],"links":[]}'
-    http_version:
+    http_version: 
   recorded_at: Tue, 11 Nov 2014 16:28:14 GMT
+- request:
+    method: get
+    uri: http://public.xenapto.com/api/v2/search.json?name=Derek%20Jones%20III
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - "*/*; q=0.5, application/xml"
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Date:
+      - Fri, 15 May 2015 10:32:25 GMT
+      Status:
+      - 404 Not Found
+      Connection:
+      - close
+      Content-Type:
+      - application/xml; charset=utf-8
+      Content-Length:
+      - '104'
+      X-Request-Id:
+      - 5ddfb1b7-2ec9-4a50-83cc-aefe01f8eb85
+      X-Runtime:
+      - '0.007916'
+    body:
+      encoding: UTF-8
+      string: |
+        <?xml version="1.0" encoding="UTF-8"?>
+        <hash>
+          <status>404</status>
+          <error>Not Found</error>
+        </hash>
+    http_version: 
+  recorded_at: Fri, 15 May 2015 10:32:25 GMT
 recorded_with: VCR 2.9.3
