--- a/spec/support/cassettes/source_slug.yml
+++ b/spec/support/cassettes/source_slug.yml
@@ -46,4 +46,46 @@ http_interactions:
         Thomas Edward Jones","page_link":"/derek-jones","source_created_at":null,"source_id":165075,"source_namespace":"users","source_slug":"derek-jones","source_updated_at":null,"website":null,"source_links":[],"source_funding_rounds":[],"source_relationships":[],"source_identities":[{"description":null,"service":"angel_list","slug":"derek-jones","url":"https://angel.co/derek-jones"},{"description":null,"service":"avatar","slug":"https://d1qb2nb5cznatu.cloudfront.net/users/165075-medium_jpg?1405505118","url":"https://d1qb2nb5cznatu.cloudfront.net/users/165075-medium_jpg?1405505118"},{"description":null,"service":"linked_in","slug":"pub/derek-jones/15/b2/55b","url":"http://www.linkedin.com/pub/derek-jones/15/b2/55b"},{"description":null,"service":"domain","slug":"dereknakano.com","url":"http://www.dereknakano.com"},{"description":null,"service":"url","slug":"http://www.dereknakano.com","url":"http://www.dereknakano.com"}],"counterparty_relationships":[]}]}'
     http_version: 
   recorded_at: Fri, 06 Feb 2015 17:38:54 GMT
+- request:
+    method: get
+    uri: http://public.xenapto.com/api/v2/from.json?slug=derek-jones&source=angel_list
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - "*/*; q=0.5, application/xml"
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Date:
+      - Fri, 15 May 2015 10:32:25 GMT
+      Status:
+      - 404 Not Found
+      Connection:
+      - close
+      Content-Type:
+      - application/xml; charset=utf-8
+      Content-Length:
+      - '104'
+      X-Request-Id:
+      - 40998415-32f2-473b-958c-0f8fdbf48110
+      X-Runtime:
+      - '0.016751'
+    body:
+      encoding: UTF-8
+      string: |
+        <?xml version="1.0" encoding="UTF-8"?>
+        <hash>
+          <status>404</status>
+          <error>Not Found</error>
+        </hash>
+    http_version: 
+  recorded_at: Fri, 15 May 2015 10:32:25 GMT
 recorded_with: VCR 2.9.3
